package DIP.Exercise_refactored;

public interface DataStorage {
    void write(String inputString);
}